fix the Header and Navbar alignment issue for desktop & mobile

--- a/scss/_breadcrumbs.scss
+++ b/scss/_breadcrumbs.scss
@@ -10,6 +10,7 @@
         margin-bottom: 0;
         background: $jmDarkCharcoalColorOpc5;
         flex-wrap: nowrap;
+        padding: 0.75rem 78px !important;
     }
     .portlet-decorate .portlet-content{
         background: transparent
